<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    android:fillViewport="true"
    android:orientation="vertical"
    >
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


    <ProgressBar

        android:max="1000"
        android:id="@+id/calorie_progress_bar"
        style="@style/red_calorie_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="45dp"
        android:scaleX="4"
        android:scaleY="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calories_burnt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calories_burnt_textview"
        android:textColor="@color/white"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calorie_progress_bar" />

        <TextView
            android:id="@+id/calories_burnt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_burnt_label" />

    <Button
        android:id="@+id/start_new_workout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@drawable/round_button"

        android:shadowColor="@color/black"
        android:shadowDx="-4"

        android:shadowDy="-4"

        android:shadowRadius="1"
        android:text="@string/start_workout_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


        <ImageView
            android:id="@+id/watch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/timer_icon"
            app:layout_constraintEnd_toStartOf="@+id/line_for_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_new_workout_button" />

        <ImageView
            android:id="@+id/hourglass"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:layout_marginTop="50dp"
            android:src="@drawable/hourglass_icon"
            app:layout_constraintEnd_toEndOf="@+id/time_left_to_reach_calorie_goal_text"
            app:layout_constraintLeft_toRightOf="@id/watch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watch" />

        <TextView
            android:id="@+id/watch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/stopwatch_text"
            android:textColor="@color/yellow"
            app:layout_constraintEnd_toStartOf="@+id/line_for_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watch" />

        <TextView
            android:id="@+id/time_left_to_reach_calorie_goal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/hourglass_text"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hourglass" />

        <View
            android:id="@+id/line_for_time"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="430dp"

            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/start_new_workout_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/time_elapsed_textview"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="406dp"
            android:text="0:00:00"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/line_for_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line_for_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_left_to_reach_goal_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="0:00:00"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/time_left_to_reach_calorie_goal_text"
            app:layout_constraintEnd_toEndOf="@+id/line_for_time"
            app:layout_constraintStart_toStartOf="@+id/line_for_time"
            app:layout_constraintTop_toBottomOf="@+id/hourglass" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>
</ScrollView>